# silly-cat-engine

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  rustfmt.toml  vk_layer_settings.txt
.github/workflows/: main.yml
benches/: ring_buffer.rs
camera/: Cargo.toml
camera/src/: lib.rs
cornell-box/: Cargo.toml  build.rs
cornell-box/models/: CornellBox.glb
cornell-box/src/: main.rs
cornell-box/src/engine/: mod.rs
cornell-box/src/engine/shaders/: raytrace.comp  raytrace.rgen
egui-backend/: Cargo.toml  build.rs
egui-backend/src/: lib.rs
egui-backend/src/shaders/: mod.rs
egui-backend/tests/: mod.rs
gltf-viewer/: Cargo.toml
gltf-viewer/src/: main.rs
gltf-viewer/src/engine/: mod.rs
gltf-viewer/src/engine/shaders/: mod.rs  ray_gen.rgen
gltf-wrapper/: Cargo.toml
gltf-wrapper/src/: lib.rs
minecraft/: Cargo.toml  build.rs
minecraft/models/basic-blocks/: basic-blocks.glb  basic-blocks.gltf
minecraft/src/engine/: mod.rs  scene.rs
minecraft/src/engine/shaders/: closest_hit_0.rchit  closest_hit_3.rchit  closest_hit_4.rchit  closest_hit_common.glsl  miss.rmiss  raytrace.comp
ray-tracing-gltf-viewer/: Cargo.toml
ray-tracing-gltf-viewer/src/: main.rs
ray-tracing-gltf-viewer/src/engine/: mod.rs
render-pass/: Cargo.toml
render-pass/src/quad/: mod.rs
safe-vk/: Cargo.toml
safe-vk/src/: lib.rs
safe-vk/src/entry/: mod.rs
safe-vk/src/entry/instance/: mod.rs
safe-vk/tests/: mod.rs
shader/: Cargo.toml
shader/src/: quad.frag  quad.vert  ray_trace.comp
shaders/: Cargo.toml  build.rs
shaders/src/: lib.rs
src/: engine.rs  main.rs  triangle.rs
src/val/: mod.rs  surface.rs  swapchain.rs
src/val/device/: command_buffer.rs  debug.rs  mod.rs  queue.rs
src/val/instance/: mod.rs
tracer/: Cargo.toml
tracer/src/: main.rs
tracer/src/engine/: acceleration_structure.rs  buffer.rs  camera.rs  command_buffer.rs  image.rs  mod.rs  model.rs  pipeline.rs  queue.rs  resource.rs  swapchain.rs
tracer/src/engine/shaders/: closest_hit.rchit  miss.rmiss  mod.rs  ray_gen.rgen
tracer/src/engine/ui_backend/: mod.rs
tracer/src/engine/ui_backend/shaders/: egui.frag  egui.vert  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
