[package]
name = "silly-cat-engine"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.0"
log = "0.4.11"
anyhow = "1.0.34"
chrono = "0.4"
crossbeam = "0.8.0"
winit = "0.23.0"
ash = "0.31.0"
ash-window = "0.5.0"
