[workspace]
members = [
    "tracer",
    "safe-vk",
    "xtask",
    "egui-backend",
    "gltf-wrapper",
    "gltf-viewer",
    "cornell-box",
    "shader",
    "render-pass",
    "camera",
]


[patch.crates-io]
ash = { git = "https://github.com/MaikKlein/ash", branch = "master" }
ash-window = { git = "https://github.com/MaikKlein/ash", branch = "master" }
vk-mem = { git = "https://github.com/evopen/vk-mem-rs.git", branch = "master" }
