[package]
name = "camera"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.5.0", features = ["derive"] }
glam = { version = "0.12.0", features = ["bytemuck"] }
winit = "0.24.0"
