[package]
name = "cornell-box"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe-vk = { path = "../safe-vk" }
egui-backend = { path = "../egui-backend" }
tokio = { version = "1.2.0", features = ["rt", "rt-multi-thread", "net", "process", "sync"] }
egui_winit_platform = "0.4.0"
winit = "0.24.0"
egui = "0.8.0"
nfd2 = "0.2.3"
gltf-wrapper = { path = "../gltf-wrapper" }
rust-embed= "5.9.0"
image = "0.23.13"
bytemuck = { version = "1.5.0", features = ["derive"] }
env_logger = "0.8.3"
log = "0.4.14"
camera = { path = "../camera" }
glam = { version = "0.12.0", features = ["bytemuck"] }


[build-dependencies]
shaderc = "0.7.1"
anyhow = "1.0.38"
glob = "0.3.0"

[[bin]]
name = "rt-pipeline"
path = "src/bin/rt-pipeline/main.rs"

[[bin]]
name = "compute"
path = "src/bin/compute/main.rs"
