[package]
name = "egui-backend"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed= "5.9.0"
safe-vk = { path = "../safe-vk" }
epi = "0.8.0"
bytemuck = { version = "1.5.0", features = ["derive"] }

[build-dependencies]
shaderc = "0.7.1"
anyhow = "1.0.38"
glob = "0.3.0"

[dev-dependencies]
winit = "0.24.0"
tokio = { version = "1.2.0", features = ["rt", "rt-multi-thread", "net", "process", "sync"] }
ash-window = "0.5.0"
egui_winit_platform = "0.4.0"
