[package]
name = "gltf-viewer"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe-vk = { path = "../safe-vk" }
egui-backend = { path = "../egui-backend" }
tokio = { version = "1.5.0", features = ["rt", "rt-multi-thread", "net", "process", "sync"] }
egui_winit_platform = "0.5.0"
winit = "0.24.0"
egui = "0.11.0"
nfd2 = "0.3.0"
gltf-wrapper = { path = "../gltf-wrapper" }
rust-embed= "5.9.0"

[build-dependencies]
shaderc = "0.7.2"
anyhow = "1.0.40"
glob = "0.3.0"
