[package]
name = "gltf-wrapper"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = "0.15.2"
safe-vk = { path = "../safe-vk" }
glam = { version = "0.12.0", features = ["bytemuck"] }
bytemuck = { version = "1.5.0", features = ["derive"] }
