[package]
name = "safe-vk"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
ash = "0.31.0"
ash-window = "0.5.0"
petgraph = "0.5.1"
raw-window-handle = "0.3.3"
vk-mem = { version = "0.2.2", features = ["link_vulkan"] }

[dev-dependencies]
winit = "0.24.0"

