[package]
name = "shader"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed= "5.9.0"

[build-dependencies]
shaderc = "0.7.1"
anyhow = "1.0.38"
glob = "0.3.0"
